--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -69,6 +69,7 @@
 .subscribe__input::placeholder {
   color: #444444;
   text-transform: uppercase;
+  opacity: 1;
 }
 
 .subscribe__input:hover {
@@ -76,7 +77,7 @@
 }
 
 .subscribe__input:focus {
-  border: none;
+  border: 1px solid transparent;
   outline: 2px solid #444444;
 }
 
