--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -55,8 +55,9 @@
 
     &::before {
       top: 0;
+      left: 50%;
       display: block;
-      width: 50vw;
+      width: 720px;
       height: 694px;
       background-color: #535257;
       background-image: url("../../images/index/hero/hero-background-desktop@1x.jpg");
@@ -66,8 +67,9 @@
 
     &::after {
       top: 0;
+      left: 50%;
       display: block;
-      width: 50vw;
+      width: 720px;
       height: 694px;
     }
   }
